# InboxPilot

./: .gitignore  .replit  README.md  apple_imap.py  assistant_loop.py  automation.db  automation.py  db.py  export_api.py  graph.py  inbox_api.py  llm.py  llm_api.py  llm_client.py  llm_worker.py  main.py  policy.json  pyproject.toml  replit.md  session_api.py  store.py  tests_smoke.md  time_filters.py  voice_api.py
providers/: __init__.py  apple.py  base.py  gmail.py  microsoft.py
static/: app.css  app.js  handsfree.js  offlineStore.js
templates/: dashboard.html  tutorial.html  ui.html
tests/: conftest.py  test_automation.py  test_endpoints.py  test_providers.py  test_time_filters.py
utils/: __init__.py  text.py
